test:endToEnd -add new reminder -add new reminder without title -add new reminder without location

--- a/app/src/main/res/layout/fragment_save_reminder.xml
+++ b/app/src/main/res/layout/fragment_save_reminder.xml
@@ -70,6 +70,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_normal"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
             android:src="@drawable/ic_save"
             app:fabSize="normal"
